[package]
name = "advent"
version = "0.1.0"
authors = ["Heath Raftery <heath@newie.ventures>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day19"
path = "src/day19.rs"

[dependencies]
# trees = "0.2.1"
num_enum = "0.4.2"
# compare = "0.1.0"
# itertools = "0.8.2"
# num = "0.2.0"
# rand = "0.7.2"
# strum = "0.17.1"
# strum_macros = "0.17.1"
# ascii = "1.0.0"
# fnv = "1.0.6"